# uv-package

./: .gitignore  .pre-commit-config.yaml
example-app/: README.md  main.py  pyproject.toml
my-package-neerajlalji/: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
my-package-neerajlalji/docs/: CHANGELOG.md  index.md
my-package-neerajlalji/docs/api/: index.md
my-package-neerajlalji/src/my_package_neerajlalji/: __init__.py  __version__.py
