[project]
name = "example-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1",
]

[project.optional-dependencies]
prod = [
    "my-package-neerajlalji==0.1.1"
    ]

local = [
    "my-package-neerajlalji"
    ]

[dependency-groups]
# Testing dependencies - used in CI/CD
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",  # Coverage reporting
]

# Development tools - linting, formatting, type checking
dev = [
    # "ruff>=0.8.0", not needed due to pre-commit hooks
    # "mypy>=1.8.0", not needed due to pre-commit hooks
    "pip>=25.3",
    "pre-commit>=4.0.0",
]

[tool.uv]
package = false  # This is an application, not a library
conflicts = [[ { extra = "prod" }, { extra = "local" } ],] # Prevent enabling both at once
default-groups = [] # Needed to prevent dev installing by default

[tool.uv.sources]
my-package-neerajlalji = [
  { path = "../my-package-neerajlalji", editable = true, extra = "local" },
  { index = "testpypi", extra = "prod" },
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
