[project]
name = "my-package-neerajlalji"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neeraj Lalji", email = "neeraj.lalji@depop.com" }
]
maintainers = [
    { name = "Neeraj Lalji", email = "neeraj.lalji@depop.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "mike>=2.1.3", # https://pypi.org/project/mike/
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.13",
    "ruff>=0.14.4",
]

[tool.ruff]
# Set the target Python version
target-version = "py313"

[tool.ruff.lint]
# Enable docstring checking rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstring checks)
]

# Ignore specific rules if needed
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"
