[project]
name = "my-package-neerajlalji"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neeraj Lalji", email = "neeraj.lalji@depop.com" }
]
maintainers = [
    { name = "Neeraj Lalji", email = "neeraj.lalji@depop.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "mike>=2.1.3", # https://pypi.org/project/mike/
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.13",
    "ruff>=0.14.4",
]

[tool.ruff]
# Set the target Python version
target-version = "py313"

[tool.ruff.lint]
# Enable docstring checking rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (docstring checks)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:version",
    "src/my_package_neerajlalji/__version__.py:__version__"
]
update_changelog_on_bump = true
tag_format = "my-package-neerajlalji/v$version"
